--- a/app/src/main/res/layout/watch_fragment.xml
+++ b/app/src/main/res/layout/watch_fragment.xml
@@ -3,9 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.carlosjimz87.stopwatch.ui.watch.WatchViewModel" />
+    </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/black"
         tools:context=".ClockFragment">
 
         <TextView
@@ -14,8 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:gravity="center"
-            android:hint="@string/init_stop_watch_value"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
+            android:text="@string/init_stop_watch_value"
             android:textSize="50sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
