adding RecordFragment & RecordAdapter

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="green">#38914E</color>
     <color name="green_variant">#73CC89</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#EDE5E5</color>
     <color name="red">#F44336</color>
 </resources>
