--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -4,6 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+
+        <variable
+            name="record"
+            type="com.carlosjimz87.stopwatch.domain.models.Record" />
+
+    </data>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,7 +36,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 tools:ignore="RtlSymmetry"
-                tools:text="00:01:14.234" />
+                tools:text="@{record.time}" />
 
             <TextView
                 android:id="@+id/dateAt"
@@ -38,7 +46,7 @@
                 android:textSize="12sp"
                 android:textAlignment="center"
                 android:layout_gravity="bottom|center_horizontal"
-                tools:text="@string/dateAtText"
+                tools:text="@{record.datetime}"
                 android:maxLines="1"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/noto_sans" />
