--- a/app/src/main/res/layout/records_fragment.xml
+++ b/app/src/main/res/layout/records_fragment.xml
@@ -2,18 +2,17 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
     <data>
         <variable
-            name="viewModel"
+            name="recordsViewModel"
             type="com.carlosjimz87.stopwatch.domain.viewmodels.RecordsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recordsRecyclerView"
             android:scrollbars="vertical"
@@ -21,10 +20,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            app:listData="@{recordsViewModel.records}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
