--- a/app/src/main/res/layout/stopwatch_fragment.xml
+++ b/app/src/main/res/layout/stopwatch_fragment.xml
@@ -5,7 +5,7 @@
 
     <data>
         <variable
-            name="viewModel"
+            name="stopwatchViewModel"
             type="com.carlosjimz87.stopwatch.domain.viewmodels.StopWatchViewModel" />
     </data>
 
@@ -21,7 +21,7 @@
             android:layout_marginTop="24dp"
             android:gravity="center"
             android:textColor="@color/white"
-            android:text="@{viewModel.formattedTime}"
+            android:text="@{stopwatchViewModel.formattedTime}"
             android:textSize="50sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
             android:gravity="center"
             android:padding="8dp"
             android:text="@string/stop"
-            android:onClick="@{() -> viewModel.resetTimer()}"
+            android:onClick="@{() -> stopwatchViewModel.resetTimer()}"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintEnd_toStartOf="@+id/startOrPauseBtn"
@@ -57,7 +57,7 @@
             android:gravity="center"
             android:padding="8dp"
             android:text="@string/start"
-            android:onClick="@{() -> viewModel.startPauseTimer()}"
+            android:onClick="@{() -> stopwatchViewModel.startPauseTimer()}"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
