--- a/app/src/main/res/layout/record_item.xml
+++ b/app/src/main/res/layout/record_item.xml
@@ -46,7 +46,7 @@
                 android:textSize="12sp"
                 android:textAlignment="center"
                 android:layout_gravity="bottom|center_horizontal"
-                tools:text="@{record.datetime}"
+                android:text="@{@string/dateAtText(record.datetime)}"
                 android:maxLines="1"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/noto_sans" />
