--- a/app/src/main/res/layout/records_fragment.xml
+++ b/app/src/main/res/layout/records_fragment.xml
@@ -21,7 +21,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:listData="@{recordsViewModel.records}"
+            tools:listitem="@layout/record_item"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
