:sparkles: Added delete records on Swipe gesture and eliminating blinking when the list changes

--- a/app/src/main/res/layout/records_fragment.xml
+++ b/app/src/main/res/layout/records_fragment.xml
@@ -18,8 +18,9 @@
             android:id="@+id/recordsRecyclerView"
             android:scrollbars="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginStart="16dp"
+
             android:layout_marginEnd="16dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:listData="@{recordsViewModel.records}"
